autopwn v0.17.0 - 20150601

* autopwn shell (similar to msfconsole)
* Code rewrite (slightly cleaner now)

autopwn v0.16.0 - 20150426

* Documentation work
* Code optimisations
  (966 SLOC to 926 SLOC
  in autopwn/__init__.py)
* Tool config changes
* Assessment config cleanup
* Bug fixes

autopwn v0.15.0 - 20150424

* Addded ability to specify ip address lists
* Modified ruleset code to allow for lists within
  lists for target-parameter-exists. This means
  that a user can specify that as long as *one*
  of the items in the list exists, then no
  rule violation occurred

autopwn v0.14.0 - 20150421

* Added cookie support to some tools

autopwn v0.13.0 - 20150421

* autopwn has been rewritten in python3

autopwn v0.12.0 - 20150420 (with thanks to berdario)

* This is the last version of autopwn which will be written
  in Python2. No new features will be written for autopwn
  on Python2, only bug fixes will be backported.
* autopwn can now be installed by pip
* Adopting semver (http://semver.org/)

autopwn v0.11 - 20150417

* Added experimental cookie support for tools. Currently
  only the arachni tool configuration has been updated
  to allow for cookie options

autopwn v0.10 - 20150415

* Added option to specify assessments directory
* Added parallel command line option (overrides
  all other parallel options specified)

autopwn v0.9.3 - 20150415

* Added timezone info to logs
* Modified parallel option in tool configs to booleans

autopwn v0.9.2 - 20150415

* Greater than and less than rules now work

autopwn v0.9.1 - 20150409

* Fixed bad bug where redirection locations were being used as
  targets (had to shell=True the Popen(), will fix properly
  sometime)
* Added stdout option to tool configs. If a stdout log should
  be generated for a tool, then "stdout: True" should be specified,
  if the tool output is being redirected to a file already,
  "stdout: False" should be used so an empty stdout isn't created

autopwn v0.9 - 20150408
