@@ -1,4 +1,4 @@
 name: drupal
 long_name: Drupal Scans
-autopwn_version: 0.17.0
+autopwn_version: 0.18.0
 description: Run CMSmap Drupal scans against target.
