@@ -7,7 +7,7 @@ name: example
 long_name: Example (Parallel)
 
 # Autopwn version
-autopwn_version: 0.17.0
+autopwn_version: 0.18.0
 
 # Assessment description
 description: Example assessment configuration file
