@@ -1,4 +1,4 @@
 name: webapp
 long_name: Web Application
-autopwn_version: 0.17.0
+autopwn_version: 0.18.0
 description: Run web application specific tools against target
