@@ -2,7 +2,7 @@ name: arachni
 binary_name: arachni
 url: http://www.arachni-scanner.com/
 description: Arachni is a Free/Open-Source Web Application Security Scanner aimed towards helping users evaluate the security of web applications.
-autopwn_version: 0.17.0
+autopwn_version: 0.18.0
 assessment_groups: ['webapp']
 
 rules:
