@@ -2,7 +2,7 @@ name: dirb
 binary_name: dirb
 url: http://dirb.sourceforge.net/
 description: URL Bruteforcer - DIRB is a Web Content Scanner. It looks for hidden Web Objects.
-autopwn_version: 0.17.0
+autopwn_version: 0.18.0
 assessment_groups: ['webapp', 'dir-brute']
 
 rules:
