@@ -2,7 +2,7 @@ name: nbtscan
 binary_name: nbtscan
 url: http://www.unixwiz.net/tools/nbtscan.html
 description: NBTScan is a program for scanning IP networks for NetBIOS name information (similar to what the Windows nbtstat tool provides against single hosts).
-autopwn_version: 0.17.0
+autopwn_version: 0.18.0
 assessment_groups: ['infrastructure', 'windows-audit']
 
 rules:
