@@ -2,7 +2,7 @@ name: skipfish
 binary_name: skipfish
 url: https://code.google.com/p/skipfish/
 description: Skipfish is an active web application security reconnaissance tool.
-autopwn_version: 0.17.0
+autopwn_version: 0.18.0
 assessment_groups: ['webapp']
 
 rules:
