@@ -1,7 +1,7 @@
 name: test
 binary_location: /usr/bin/test
 url: http://test.sourceforge.net/
-autopwn_version: 0.17.0
+autopwn_version: 0.18.0
 
 rules:
     target-parameter-exists: [['ip','ip_address_list']]
