@@ -1,3 +1,7 @@
+autopwn v0.18.0 - 20150609
+
+* Tab completion
+
 autopwn v0.17.0 - 20150601
 
 * autopwn shell (similar to msfconsole)
